Wrote the dungeon to a file